--- a/index.html
+++ b/index.html
@@ -33,9 +33,17 @@
 
         <div class="parking">
             <h3>🅿️ Where to Park?</h3>
-            <p>There’s open parking next to the Mcd Titiwangsa Jalan Pahang</p>
+            <p>The recommended car park is just besides McD. The one circled in blue. It's a short walk to McD!
+            </p>
+            <div class="parking-map-container">
+                <img src="carpark.png" alt="Parking Map" class="parking-map" onerror="this.style.display='none';"
+                    style="width: 570px;" />
+            </div>
         </div>
     </div>
 </body>
+<style></style>
+
+</style>
 
 </html>
