--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>The recommended car park is just besides McD. The one circled in blue. It's a short walk to McD!
             </p>
             <div class="parking-map-container">
-                <img src="carpark.png" alt="Parking Map" class="parking-map" onerror="this.style.display='none';"
+                <img src="CarPark.png" alt="Parking Map" class="parking-map" onerror="this.style.display='none';"
                     style="width: 570px;" />
             </div>
         </div>
