--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="food-links">
-            <a href="https://forms.office.com/e/hi8TET20YC" target="_blank">Order Food (Parents)</a>
+            <a href="https://forms.office.com/e/hi8TET20YC" target="_blank">Order Food (Adults)</a>
             <a href="https://forms.office.com/e/smALG0Y33r" target="_blank">Order Food (Kids)</a>
         </div>
 
